# discrete-latent-representations

./: README.md  main.py  pyproject.toml
datasets/: samples.py
