[project]
name = "discrete-latent-representations"
version = "0.1.0"
description = "A learning journey through discrete latent representations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.0",
    "torchvision",
    "einops",
    "tqdm",
    "pillow",
    "jaxtyping",
]

[project.optional-dependencies]
tracking = ["wandb"]
perceptual = ["lpips"]
dev = ["jupyter", "matplotlib"]

[tool.ruff.lint]
extend-select = ["I"]
